# MLmonitor

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  devlog.md  docker-compose.yml  dudas_documentacion.md  mlmonitor_dev.db  pyproject.toml  upgrades.md
artifacts/ppt/: ppt_instructions.txt
config/: secrets_loader.py  settings.py
data/: DATOS_FALTANTES_CREDITO.md
data/backups/: rds_pre_reset_2026-04-23.sql
data/inputs/raw_tables/: layout_variables_bb.csv  muestra_weekly.csv  variables_serc.csv
docker/: entrypoint.sh
docs/: backlog.md  decisions.md
docs/architecture/: architecture.md  data_model.md
docs/curso/: 00_setup_y_prerrequisitos.md  01_arquitectura_general.md  02_aws_fundamentos.md  03_datos_rds_y_secrets.md  04_bedrock_y_ses.md  05_s3_buckets_y_prefijos.md  06_dockerfile_y_weasyprint.md  07_ecr_push_imagen.md  08_iam_roles_en_detalle.md  09_task_definition_y_run_task.md  10_logs_y_debugging.md  11_eventbridge_scheduler.md  12_operacion_diaria.md  13_evolucion_a_cicd.md  14_problemas_reales_y_postmortem.md  README.md
docs/curso/diagramas/: 01_arquitectura.mmd  02_iam_roles.mmd  03_secrets_flow.mmd  12_push_flow.mmd  13_cicd.mmd
docs/curso/sandbox/: teardown.sh
docs/curso/scripts/: check_all.sh  check_m00_setup.sh  check_m01_arquitectura.sh  check_m02_iam.sh  check_m03_rds.sh  check_m04_bedrock_ses.sh  check_m05_s3.sh  check_m07_ecr.sh  check_m09_taskdef.sh  check_m11_scheduler.sh
docs/infrastructure/: aws_deployment.md  aws_iam.md  aws_secrets_manager.md
notebooks/: README.md
scripts/: backfill.py  create_cml_presentation.py  create_presentation.py  export_rds_samples.py  generate_er_diagram.py  init_db.py  run_bootstrap.py  run_bootstrap_v2.py  run_incremental_etl.py  run_pipeline.py
src/mlmonitor/: __init__.py
src/mlmonitor/analyst/: __init__.py  base.py  bedrock_analyst.py  prompts.py  schemas.py  vertex_analyst.py
src/mlmonitor/data/: __init__.py  aggregation_rules.py  bootstrap.py  bootstrap_v2.py  dummy_generator.py  incremental_etl.py  model_config.py  model_registry.py  raw_etl.py  threshold_loader.py  variable_mapping.py
src/mlmonitor/db/: __init__.py  connection.py  models.py  session.py
src/mlmonitor/email/: __init__.py  sender.py
src/mlmonitor/etl/: __init__.py  base.py  validators.py
src/mlmonitor/metrics/: __init__.py  business_metrics.py  calculator.py  decile_metrics.py  performance.py  psi.py
src/mlmonitor/pipeline/: __init__.py  (+2 more)
tests/: conftest.py  test_aggregation_rules.py  test_bedrock_analyst.py  test_business_metrics.py  test_calculator.py  test_decile_metrics.py  test_decile_ordering.py  test_model_config.py  test_model_registry.py  test_models_indexes.py  test_performance.py  test_performance_global.py  test_performance_individual.py  test_pipeline_run_recorder.py  test_psi.py  test_segment_ordering.py  test_status_aggregation.py  test_threshold_loader.py
(+13 files in other folders)
