[tool.poetry]
name = "mlmonitor"
version = "0.1.0"
description = "Monitoreo automatizado para modelos de scoring de crédito"
authors = ["Equipo Analytics <analytics@mlmonitor.local>"]
packages = [{ include = "mlmonitor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
# --- Core / ETL (always installed) ---
sqlalchemy = "^2.0"
pandas = "^2.2"
numpy = "^1.26"
psycopg2-binary = "^2.9"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"

[tool.poetry.extras]
oracle = ["python-oracledb"]

[tool.poetry.group.pipeline]
optional = true

[tool.poetry.group.pipeline.dependencies]
weasyprint = "60.2"
pydyf = "0.8.0"
boto3 = "^1.34"
scipy = "^1.12"
jinja2 = "^3.1"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
scikit-learn = "^1.8.0"
python-pptx = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
